Change theme and change way header is fixed (scrollbar now part of whole page

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .portfolio-header {
-  position: relative;
+  position: fixed;
   background-image: url(images/header-bg.jpg);
 }
 
@@ -168,3 +168,16 @@ footer {
   background-size: cover;
 }
 
+.mdl-layout__container {
+  position:relative;
+}
+
+.mdl-layout__content {
+  margin-top:245px;
+}
+
+@media screen  and (max-width: 1024){
+  .mdl-layout__content{
+    margin-top:205px;
+  }
+}
